Enable Node Convert to base k3s.
- Move component install steps to clean functions
- Uninstall components if registration completes.
    This marks conversion from edge node storage cluster
    which provides VMs on replicated storage to a simpler
    kubernetes cluster awaiting further config.
- Enable all_components_initialized on arm64 by skipping
    install of kubevirt/cdi components.  CDI is amd64 only
    at least in this  version.
- Skip calling longhorn API when it's not expected to be
    available.  This is used in pillar node drain path
    as well as replicated volume instance metrics.  Search for
    the longhorn-system namespace to determine if the longhorn
    http api is expected to be available.

Signed-off-by: Andrew Durbin <andrewd@zededa.com>

--- a/pkg/kube/Dockerfile
+++ b/pkg/kube/Dockerfile
@@ -29,6 +29,7 @@ COPY --from=build /out/ /
 COPY cluster-init.sh /usr/bin/
 COPY cluster-utils.sh /usr/bin/
 COPY cgconfig.conf /etc
+COPY utils.sh /usr/bin/
 
 # upgrades
 COPY cluster-update.sh /usr/bin/
@@ -48,6 +49,7 @@ COPY multus-daemonset.yaml /etc
 COPY kubevirt-operator.yaml /etc
 COPY kubevirt-features.yaml /etc
 COPY external-boot-image.tar /etc/
+COPY kubevirt-utils.sh /usr/bin/
 
 # Longhorn config
 COPY longhorn-utils.sh /usr/bin/
@@ -55,6 +57,7 @@ COPY lh-cfg-v1.6.3.yaml /etc/
 COPY iscsid.conf /etc/iscsi/
 COPY longhorn-generate-support-bundle.sh /usr/bin/
 COPY nsmounter /usr/bin/
+COPY longhorn_uninstall_settings.yaml /etc/
 
 # descheduler
 COPY descheduler-utils.sh /usr/bin/
