--- a/pkg/kube/config.yaml
+++ b/pkg/kube/config.yaml
@@ -13,6 +13,11 @@ etcd-expose-metrics: true
 container-runtime-endpoint: "/run/containerd-user/containerd.sock"
 disable-network-policy: true
 disable-cloud-controller: true
+kubelet-arg:
+  - "node-status-update-frequency=2s"
+kube-controller-manager-arg:
+  - "node-monitor-period=2s"
+  - "node-monitor-grace-period=10s"
 kube-apiserver-arg:
   - "event-ttl=72h"
   - "authentication-token-webhook-config-file=/etc/kube-api-authn-webhook.yaml"
