--- a/pkg/kube/config.yaml
+++ b/pkg/kube/config.yaml
@@ -15,9 +15,12 @@ disable-network-policy: true
 disable-cloud-controller: true
 kubelet-arg:
   - "node-status-update-frequency=2s"
+kube-controller-arg:
+  - "node-monitor-period=5s" # Keep default or adjust
+  - "node-monitor-grace-period=40s"
 kube-controller-manager-arg:
-  - "node-monitor-period=2s"
-  - "node-monitor-grace-period=10s"
+  - "node-monitor-period=5s"
+  - "node-monitor-grace-period=40s"
 kube-apiserver-arg:
   - "event-ttl=72h"
   - "authentication-token-webhook-config-file=/etc/kube-api-authn-webhook.yaml"
