--- a/pkg/kube/Dockerfile
+++ b/pkg/kube/Dockerfile
@@ -53,6 +53,7 @@ COPY iscsid.conf /etc/iscsi/
 COPY longhorn-generate-support-bundle.sh /usr/bin/
 COPY nsmounter /usr/bin/
 COPY longhorn_uninstall_settings.yaml /etc/
+COPY failover-events.sh /usr/bin/
 
 # descheduler
 COPY descheduler-utils.sh /usr/bin/
