--- a/pkg/kube/Dockerfile
+++ b/pkg/kube/Dockerfile
@@ -38,6 +38,7 @@ COPY config.yaml /etc/rancher/k3s
 COPY debuguser-role-binding.yaml /etc/
 COPY k3s-pod-logs.sh /usr/bin/
 COPY registration-utils.sh /usr/bin/
+COPY all-kube-events.sh /usr/bin/
 
 # kubevirt yaml files are patched files and will be removed later, look at cluster-init.sh
 COPY multus-daemonset.yaml /etc
