Preserving EFI firmware settings, like language or display resolution.
Signed-off-by: Pramodh Pallapothu <pramodh@zededa.com>

--- a/pkg/kube/kubevirt-features.yaml
+++ b/pkg/kube/kubevirt-features.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: kubevirt
 spec:
   configuration:
+    vmStateStorageClass: longhorn
     permittedHostDevices:
       pciHostDevices:   # <- PCIe passthrough devices like nvme drives/NIC
       mediatedDevices:  # <- GPUs
@@ -17,3 +18,4 @@ spec:
         - Snapshot
         - HostDevices
         - GPU
+        - VMPersistentState
