pillar: NOHYPE direct-attach network interface passthrough
Implement physical network interface passthrough for NOHYPE (containerd/runc)
containers by moving the interface into the container's network namespace
using 'ip link set <dev> netns <pid>', instead of PCI passthrough which
requires a shim VM that NOHYPE containers don't have.

Changes:
- domainmgr: release adapter from vfio-pci at activation time for NOHYPE
  IoNetEth adapters using PCIReleaseGeneric (not the containerd no-op),
  wait for kernel driver rebind, rename interface if needed
- domainmgr: re-bind adapter to vfio-pci on container release via
  PCIReserveGeneric so it's ready for the next user
- domainmgr: extend kube-only NOHYPE skip to all NOHYPE in reserveAdapters
- domainmgr: guard in updatePortAndPciBackIoMember to prevent rebinding
  adapters in active use (UsedByUUID != nilUUID)
- domainmgr: fix publishAssignableAdapters overwrite (||= instead of =)
- oci: detect IoNetEth adapters for NOHYPE containers and add OCI prestart/
  poststop hooks to move the interface into/out of the container netns
- oci: grant CAP_NET_ADMIN and CAP_NET_RAW for direct-attach containers
- Add direct-net.sh OCI hook script (follows veth.sh pattern)
- Dockerfile: install direct-net.sh

Signed-off-by: Mikhail Malyshev <mike.malyshev@gmail.com>

--- a/pkg/pillar/Dockerfile
+++ b/pkg/pillar/Dockerfile
@@ -183,6 +183,7 @@ COPY scripts/device-steps.sh \
     scripts/handlezedserverconfig.sh \
     scripts/veth.sh \
     scripts/dhcpcd.sh \
+    scripts/direct-net.sh \
     scripts/copy-image-to-qcow.sh \
     scripts/check-eval-state.sh \
     /out/opt/zededa/bin/
